Fixed --accent-color in dark mode.

--- a/collections/styles.css
+++ b/collections/styles.css
@@ -67,6 +67,7 @@
 		--color-second: #2b2b2e;
 		--color-three: #4b4b4b;
 		--color-four: #d1d1d1;
+		--accent-color:#575757;
 		--light-only-color: transparent;
 		--light-only-shadow: 0px 0px 0px #000;
 		--light-only-shadow-hover: 0px 0px 0px #000;
